//  File: attestation.proto
//  Author: Tom Roeder <tmroeder@google.com>
//
//  Description: Protocol buffers for Tao Attestation
//
//  Copyright (c) 2013, Google Inc.  All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package tao;

message LinuxTaoSealedData {
  // Policy info
  optional int32 policy_id = 1;
  optional string policy_prog_hash = 2;
  optional string policy_arg_hash = 3;
  optional string policy_pid = 4; 
  optional string policy_subprin = 5;
  // optional int32 policy_time, etc.

  // The data
  required bytes data = 6;
}

message FakeTaoSealedData {
  // Policy info
  required string policy_name = 1;

  // The data 
  required bytes data = 4;
}
